<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_lsn3"
            style="@style/BaseBtn"
            android:text="@string/lsn3"/>

        <Button
            android:id="@+id/btn_lsn4"
            style="@style/BaseBtn"
            android:text="@string/lsn4"/>

        <Button
            android:id="@+id/btn_lsn6"
            style="@style/BaseBtn"
            android:text="@string/lsn6"/>

        <Button
            android:id="@+id/btn_lsn7"
            style="@style/BaseBtn"
            android:text="@string/lsn7"/>

        <Button
            android:id="@+id/btn_lsn11"
            style="@style/BaseBtn"
            android:text="@string/lsn11"/>

        <Button
            android:id="@+id/btn_lsn12"
            style="@style/BaseBtn"
            android:text="@string/lsn12"/>

        <Button
            android:id="@+id/btn_lsn16"
            style="@style/BaseBtn"
            android:text="@string/lsn16"/>

        <Button
            android:id="@+id/btn_lsn17"
            style="@style/BaseBtn"
            android:text="@string/lsn17"/>

        <Button
            android:id="@+id/btn_lsn18"
            style="@style/BaseBtn"
            android:text="@string/lsn18"/>

        <Button
            android:id="@+id/btn_lsn19"
            style="@style/BaseBtn"
            android:text="@string/lsn19"/>

        <Button
            android:id="@+id/btn_lsn20"
            style="@style/BaseBtn"
            android:text="@string/lsn20"/>

        <Button
            android:id="@+id/btn_lsn21"
            style="@style/BaseBtn"
            android:text="@string/lsn21"/>

        <Button
            android:id="@+id/btn_lsn22"
            style="@style/BaseBtn"
            android:text="@string/lsn22"/>


    </LinearLayout>

</ScrollView>