<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".lsn3.Lsn3HomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_linear_gradient"
            style="@style/BaseBtn"
            android:text="@string/linear_gradient"/>

        <Button
            android:id="@+id/btn_sweep_gradient"
            style="@style/BaseBtn"
            android:text="@string/sweep_gradient"/>

        <Button
            android:id="@+id/btn_radial_gradient"
            style="@style/BaseBtn"
            android:text="@string/radial_gradient"/>

        <Button
            android:id="@+id/btn_bitmap_shader"
            style="@style/BaseBtn"
            android:text="@string/bitmap_shader"/>

        <Button
            android:id="@+id/btn_compose_shader"
            style="@style/BaseBtn"
            android:text="@string/compose_shader"/>

    </LinearLayout>

</ScrollView>